feat: Implement comprehensive image optimization and conversion features
- Added support for additional image formats including heic, heif, avif, jpeg, jpg, png, raw, tiff, tif, webp, gif, jp2, jpx, j2k, j2c, and svg.
- Implemented optional compression with quality settings for applicable formats.
- Enhanced resize functionality to resize images without cropping.
- Added various optimization options:
  - Flatten: Flatten images with optional background color.
  - Sharpen: Apply sharpening to images.
  - Denoise: Apply denoising to images.
  - Grayscale: Convert images to grayscale.
  - Blur: Apply blur with specified sigma value.
- Improved error handling and messaging for better user experience.
- Ensured unique output file names to avoid overwriting existing files.
- Updated README.md with detailed usage instructions, examples, and acknowledgements for all dependencies.

This commit enhances PikPix's capabilities, providing users with a powerful and flexible tool for image processing.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pikpix",
-  "version": "1.2.0",
-  "description": "A command-line tool to convert image formats with optional compression and metadata stripping, built with Node.js, Sharp and Commander.",
+  "version": "1.3.0",
+  "description": "A command-line tool to convert and optimize image formats with optional compression and resizing.",
   "main": "index.js",
   "bin": {
     "pikpix": "./index.js"
@@ -18,18 +18,27 @@
     "converter",
     "sharp",
     "compression",
+    "optimize",
     "metadata",
     "cli",
     "command-line",
     "webp",
     "jpeg",
     "png",
-    "tiff"
+    "tiff",
+    "gif",
+    "bmp",
+    "svg",
+    "heif",
+    "heic",
+    "resize"
   ],
   "author": "TCJ9 (https://github.com/tcj9)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "commander": "^9.0.0",
+    "file-type": "^16.5.3",
     "sharp": "^0.29.3"
   }
 }
