test: Add comprehensive test suite for PikPix
- Implemented Jest for testing.
- Added tests for version output.
- Added tests for image format conversion.
- Added tests for resizing images without cropping.
- Added tests for image compression with quality settings.
- Added tests for various optimization options:
  - Flattening with optional background color.
  - Sharpening.
  - Denoising.
  - Grayscale conversion.
  - Applying blur with specified sigma value.
- Added tests for handling local and remote images.
- Added tests for processing all images in a specified directory.
- Added tests to ensure unique output file names to avoid overwriting.
- Added tests for error handling:
  - Handling non-image files.
  - Displaying errors for non-existent input paths.
- Created fixtures for testing with sample input files and directories.
- Updated package.json to include Jest and axios-mock-adapter as dev dependencies.

This commit ensures robust testing for PikPix, covering various functionalities and edge cases.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pikpix": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -40,5 +40,9 @@
     "commander": "^9.0.0",
     "file-type": "^16.5.3",
     "sharp": "^0.29.3"
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.22.0",
+    "jest": "^29.7.0"
   }
 }
